--- a/khoBlog/templates/includes/nav/search/big_search.html
+++ b/khoBlog/templates/includes/nav/search/big_search.html
@@ -1,4 +1,4 @@
-<form action="{{ search_url }}" class="d-none d-lg-block" method="get">
+<form action="{{ search_url }}" class="d-none d-lg-block search_form" method="get">
     <div class="input-group">
         <div class="input-group-prepend">
             <span class="input-group-text" id="search_label_big"><a href="{% url 'blog:search' %}">Search</a></span>
