--- a/khoBlog/templates/account/change_password.html
+++ b/khoBlog/templates/account/change_password.html
@@ -1,12 +1,27 @@
-{% extends "sub_base.html" %}
-{% load bootstrap5 %}
+{% extends 'sub_base.html' %}
+{% load project_tags %}
 
 {% block content %}
-    <form method="POST" enctype="multipart/form-data" class="form">
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        {% buttons %}
-            <button type="submit" class="btn btn-primary mt-2">Change Password</button>
-        {% endbuttons %}
-    </form>
+    {% if user.is_authenticated %}
+        {% if user.id == object.id or user.is_superuser %}
+            <div class="card formcard">
+                <div class="card-body">
+                    <form enctype="multipart/form-data" method="post" novalidate>
+                        <div class="text-danger">
+                            {{ form.non_field_errors }}
+                        </div>
+
+                        {% form form %}
+
+                        <button type="submit" class="btn btn-primary">{{ title }}</button>
+                    </form>
+                </div>
+            </div>
+
+        {% else %}
+            <p>It's not your profile.</p>
+        {% endif %}
+    {% else %}
+        <p>You have to be logged in.</p>
+    {% endif %}
 {% endblock content %}
