--- a/blog/templates/blog/category_new.html
+++ b/blog/templates/blog/category_new.html
@@ -1,14 +1,19 @@
 {% extends 'blog/base_post.html' %}
-{% load bootstrap5 %}
-{% load markdown_extra %}
+{% load project_tags %}
 
 {% block main %}
-    <form method="POST" class="form">
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        {% buttons %}
-            <button type="submit" class="btn btn-primary mt-2">Add Category</button>
-        {% endbuttons %}
-    </form>
+    <div class="card formcard">
+        <div class="card-body">
+            <form method="post" novalidate>
+                <div class="text-danger">
+                    {{ form.non_field_errors }}
+                </div>
+
+                {% form form %}
+
+                <button type="submit" class="btn btn-primary">{{ title }}</button>
+            </form>
+        </div>
+    </div>
 
 {% endblock main %}
