--- a/khoBlog/templates/account/edit_profile.html
+++ b/khoBlog/templates/account/edit_profile.html
@@ -1,23 +1,27 @@
 {% extends 'sub_base.html' %}
-
-{% load bootstrap5 %}
+{% load project_tags %}
 
 {% block content %}
     {% if user.is_authenticated %}
         {% if user.id == object.id or user.is_superuser %}
-            <h2>Edit User</h2>
-            <form method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                {% bootstrap_form form %}
-                {% buttons %}
-                    <button type="submit" class="btn btn-primary mt-2">Update profile</button>
-                {% endbuttons %}
-            </form>
+            <div class="card formcard">
+                <div class="card-body">
+                    <form enctype="multipart/form-data" method="post" novalidate>
+                        <div class="text-danger">
+                            {{ form.non_field_errors }}
+                        </div>
+
+                        {% form form %}
+
+                        <button type="submit" class="btn btn-primary">{{ title }}</button>
+                    </form>
+                </div>
+            </div>
 
         {% else %}
             <p>It's not your profile.</p>
         {% endif %}
     {% else %}
-        <p>It's not your profile.</p>
+        <p>You have to be logged in.</p>
     {% endif %}
 {% endblock content %}
