--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -263,37 +263,8 @@
     <script src="{% static 'khoBlog/js/scripts/dynamic.js' %}"></script>
     <script src="{% static 'vendor/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'khoBlog/js/scripts/offcanvas.js' %}"></script>
-
-    <script>
-        (function(exports) {
-            var themeChanger = {
-                settings: {
-                    wrapper: $('.wrapper'),
-                    buttons: $('.controls .controls')
-                },
-
-                init: function () {
-                    var _self = this;
-                    this.settings.buttons.on('click', function () {
-                        var $node = $(this),
-                            theme = $node.data('theme');
-                        _self.settings.wrapper.removeClass().addClass('wrapper ' + theme);
-                        _self.settings.buttons.removeClass('disabled');
-                        $node.toggleClass('disabled');
-                    });
-                }
-            };
-
-            themeChanger.init();
-        }(window));
-    </script>
-
-    <script>
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
-        })
-    </script>
+    <script src="{% static 'khoBlog/js/scripts/themes.js' %}"></script>
+    <script src="{% static 'khoBlog/js/scripts/tooltips.js' %}"></script>
 
 </body>
 </html>
