--- a/blog/templates/blog/lists/post_category_list.html
+++ b/blog/templates/blog/lists/post_category_list.html
@@ -9,7 +9,7 @@
 {% endblock page_top_title %}
 
 {% block page_top_featured %}
-    <p>
+    <p class="mb-0">
         {% if not cats.withdrawn or cats.withdrawn and user.is_superuser %}
             {{ cats.description }}
         {% else %}
