--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -15,7 +15,7 @@
         <div class="row g-0">
             <div class="col-md-4">
                 {% if object.profile_pic %}
-                    <img class="w-100 p-2" src="{{ object.profile_pic.url }}" alt="Profile Pic of {{ object.username }}" />
+                    <img class="w-50 p-2" src="{{ object.profile_pic.url }}" alt="Profile Pic of {{ object.username }}" />
                 {% endif %}
             </div>
             <div class="col-md-8">
@@ -29,23 +29,27 @@
                     </h3>
                     <h6 class="card-subtitle">
                         <small class="text-muted">
-                            {% if object.is_superuser %}
-                                {% if object.owner %}
-                                    Website Owner
-                                {% else %}
-                                    Admin
-                                {% endif %}
-                            {% elif object.is_staff %}
-                                Staff
+                            {% if object.roles.last %}
+                                {{ object.roles.last }}
                             {% else %}
-                                User
+                                {% if object.is_superuser %}
+                                    {% if object.owner %}
+                                        Website Owner
+                                    {% else %}
+                                        Admin
+                                    {% endif %}
+                                {% elif object.is_staff %}
+                                    Staff
+                                {% else %}
+                                    User
+                                {% endif %}
                             {% endif %}
                         </small>
                     </h6>
                     <p class="card-text">{{ object.bio }}</p>
                 </div>
             </div>
-            <div class="col-md-12">
+            {% comment %} <div class="col-md-12">
                 <div class="card-body">
                     {% for comment in comments %}
                         {% if comment.approbation_state == 'AP' or user.is_superuser %}
@@ -53,7 +57,7 @@
                         {% endif %}
                     {% endfor %}
                 </div>
-            </div>
+            </div> {% endcomment %}
         </div>
     </div>
 
