some other stuff

--- a/khoBlog/templates/comments/list.html
+++ b/khoBlog/templates/comments/list.html
@@ -43,12 +43,17 @@
                                         {{ comment.title }}
                                     {% elif comment.is_removed %}
                                         This comment has been removed.
+                                        {% if user.is_superuser %}
+                                            <span class="text-small text-muted">{{ comment.title }}</span>
+                                        {% endif %}
                                     {% endif %}
                                 </h5>
                             {% endif %}
                             <span class="card-text">
                                 {% if not comment.is_removed %}
                                     {{ comment.comment }}
+                                {% elif user.is_superuser %}
+                                    <span class="text-small text-muted">{{ comment.comment }}</span>
                                 {% endif %}
                             </span>
                         {% endautoescape %}
