and last smol change I guess

--- a/khoBlog/templates/comments/list.html
+++ b/khoBlog/templates/comments/list.html
@@ -42,7 +42,7 @@
                                     {% if comment.title %}
                                         {{ comment.title }}
                                     {% elif comment.is_removed %}
-                                        This comment has been removed.
+                                        <span class="text-muted">This comment has been removed.</span>
                                         {% if comment.title and user.is_superuser %}
                                             <span class="text-small text-muted">{{ comment.title }}</span>
                                         {% endif %}
