--- a/khoBlog/templates/comments/list.html
+++ b/khoBlog/templates/comments/list.html
@@ -18,7 +18,7 @@
                                 {% if not comment.is_removed %}
                                     {{ comment.alias_user }}
                                 {% else %}
-                                    <span class="text-muted">This comments had been removed.</span>
+                                    <span class="text-muted">This comments has been removed.</span>
                                 {% endif %}
                             {% endif %}
                         {% else %}
