--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -12,57 +12,61 @@
 {% endblock page_head %}
 
 {% block main %}
-    <div class="card mb-2">
-        <div class="card-header d-flex">
-            <span class="col">
-                <h2>Page #{{ flatpage.id }}</h2>
-            </span>
-            <span class="col">
-                {% block super_buttons %}
-                    {% if user.is_superuser %}
-                        <div class="btn-group float-end">
-                            <a class="btn btn-secondary" href="{% url 'pages:page_edit' slug=flatpage.slug %}">
-                                <i class="bi bi-pencil-square"></i> Edit
-                            </a>
-
-                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="pageAdminDropdown-{{ flatpage.id }}" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="visually-hidden">Toggle Dropdown</span>
-                            </button>
-
-                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="projectAdminDropdown">
-                                <a class="dropdown-item" href="{% url 'admin:pages_flatpage_change' object_id=flatpage.id %}">
-                                    <i class="bi bi-pencil-square"></i> Edit in Admin
+    {% if not flatpage.withdrawn or user.is_superuser %}
+        <div class="card mb-2">
+            <div class="card-header d-flex">
+                <span class="col">
+                    <h2>Page #{{ flatpage.id }}</h2>
+                </span>
+                <span class="col">
+                    {% block super_buttons %}
+                        {% if user.is_superuser %}
+                            <div class="btn-group float-end">
+                                <a class="btn btn-secondary" href="{% url 'pages:page_edit' slug=flatpage.slug %}">
+                                    <i class="bi bi-pencil-square"></i> Edit
                                 </a>
 
-                                <div class="dropdown-divider"></div>
+                                <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="pageAdminDropdown-{{ flatpage.id }}" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <span class="visually-hidden">Toggle Dropdown</span>
+                                </button>
 
-                                <a class="dropdown-item" href="{% url 'pages:page_delete' slug=flatpage.slug %}">
-                                    <i class="bi bi-trash"></i> Delete
-                                </a>
-                            </ul>
-                        </div>
-                    {% endif %}
-                {% endblock super_buttons %}
-            </span>
+                                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="projectAdminDropdown">
+                                    <a class="dropdown-item" href="{% url 'admin:pages_flatpage_change' object_id=flatpage.id %}">
+                                        <i class="bi bi-pencil-square"></i> Edit in Admin
+                                    </a>
+
+                                    <div class="dropdown-divider"></div>
+
+                                    <a class="dropdown-item" href="{% url 'pages:page_delete' slug=flatpage.slug %}">
+                                        <i class="bi bi-trash"></i> Delete
+                                    </a>
+                                </ul>
+                            </div>
+                        {% endif %}
+                    {% endblock super_buttons %}
+                </span>
+            </div>
+
+            <div class="card-body">
+                {% autoescape off %}
+                    <span class="card-text">{{ flatpage.content }}</span>
+                {% endautoescape %}
+            </div>
         </div>
 
-        <div class="card-body">
-            {% autoescape off %}
-                <span class="card-text">{{ flatpage.content }}</span>
-            {% endautoescape %}
-        </div>
-    </div>
+        {% if flatpage.enable_comments %}
+            {% get_comment_count for flatpage as comment_count %}
 
-    {% if flatpage.enable_comments %}
-        {% get_comment_count for flatpage as comment_count %}
+            {% render_comment_form for flatpage %}
+            <hr />
 
-        {% render_comment_form for flatpage %}
-        <hr />
+            <p class="text-muted text-small">This page has {{ comment_count }} comments.</p>
 
-        <p class="text-muted text-small">This page has {{ comment_count }} comments.</p>
-
-        {% render_comment_list for flatpage %}
+            {% render_comment_list for flatpage %}
+        {% else %}
+            <p class="text-muted text-small">This page has comments disabled.</p>
+        {% endif %}
     {% else %}
-        <p class="text-muted text-small">This page has comments disabled.</p>
+        <h1><a class="btn btn-danger" href="{% url 'pages:kheee' %}">{{ description }}</a></h1>
     {% endif %}
 {% endblock main %}
