--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -2,9 +2,9 @@
 {% load comments %}
 
 {% block page_head %}
-    {% if flatpage.page_head %}
+    {% if page.page_head %}
         {% autoescape off %}
-            {{ flatpage.page_head }}
+            {{ page.page_head }}
         {% endautoescape %}
     {% endif %}
 
@@ -12,32 +12,32 @@
 {% endblock page_head %}
 
 {% block main %}
-    {% if not flatpage.withdrawn or user.is_superuser %}
+    {% if not page.withdrawn or user.is_superuser %}
         <div class="card mb-2">
             <div class="card-header d-flex">
                 <span class="col">
-                    <h2>Page #{{ flatpage.id }}</h2>
+                    <h2>Page #{{ page.id }}</h2>
                 </span>
                 <span class="col">
                     {% block super_buttons %}
                         {% if user.is_superuser %}
                             <div class="btn-group float-end">
-                                <a class="btn btn-secondary" href="{% url 'pages:page_edit' slug=flatpage.slug %}">
+                                <a class="btn btn-secondary" href="{% url 'pages:page_edit' slug=page.slug %}">
                                     <i class="bi bi-pencil-square"></i> Edit
                                 </a>
 
-                                <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="pageAdminDropdown-{{ flatpage.id }}" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="pageAdminDropdown-{{ page.id }}" data-bs-toggle="dropdown" aria-expanded="false">
                                     <span class="visually-hidden">Toggle Dropdown</span>
                                 </button>
 
                                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="projectAdminDropdown">
-                                    <a class="dropdown-item" href="{% url 'admin:pages_flatpage_change' object_id=flatpage.id %}">
+                                    <a class="dropdown-item" href="{% url 'admin:pages_page_change' object_id=page.id %}">
                                         <i class="bi bi-pencil-square"></i> Edit in Admin
                                     </a>
 
                                     <div class="dropdown-divider"></div>
 
-                                    <a class="dropdown-item" href="{% url 'pages:page_delete' slug=flatpage.slug %}">
+                                    <a class="dropdown-item" href="{% url 'pages:page_delete' slug=page.slug %}">
                                         <i class="bi bi-trash"></i> Delete
                                     </a>
                                 </ul>
@@ -49,20 +49,20 @@
 
             <div class="card-body">
                 {% autoescape off %}
-                    <span class="card-text">{{ flatpage.content }}</span>
+                    <span class="card-text">{{ page.content }}</span>
                 {% endautoescape %}
             </div>
         </div>
 
-        {% if flatpage.enable_comments %}
-            {% get_comment_count for flatpage as comment_count %}
+        {% if page.enable_comments %}
+            {% get_comment_count for page as comment_count %}
 
-            {% render_comment_form for flatpage %}
+            {% render_comment_form for page %}
             <hr />
 
             <p class="text-muted text-small">This page has {{ comment_count }} comments.</p>
 
-            {% render_comment_list for flatpage %}
+            {% render_comment_list for page %}
         {% else %}
             <p class="text-muted text-small">This page has comments disabled.</p>
         {% endif %}
