--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -26,7 +26,7 @@
                                             </button>
 
                                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="postAdminDropdown">
-                                                <a class="dropdown-item" href="{% url 'admin:pages_flatpage_change' object_id=page.id %}">
+                                                <a class="dropdown-item" href="{% url 'admin:pages_page_change' object_id=page.id %}">
                                                     <i class="bi bi-pencil-square"></i> Edit in Admin
                                                 </a>
 
