--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -1,9 +1,4 @@
-{% load static %}
-{% load socialaccount %}
-{% load default_app_theme_set %}
-{% load footer_set %}
-{% load sitetree %}
-
+{% load static socialaccount default_app_theme_set footer_set sitetree compress %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -86,7 +81,15 @@
     <link rel="stylesheet" href="{% static 'vendor/node_modules/bootstrap/dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/node_modules/bootstrap-icons/font/bootstrap-icons.css' %}">
 
-    <script src="{% static 'vendor/node_modules/jquery/dist/jquery.slim.min.js' %}"></script>
+    <script defer src="{% static 'vendor/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
+    {% compress js %}
+        <script defer src="{% static 'khoBlog/js/scripts/dynamic.js' %}"></script>
+        <script defer src="{% static 'khoBlog/js/scripts/offcanvas.js' %}"></script>
+        <script defer src="{% static 'vendor/node_modules/jquery/dist/jquery.slim.min.js' %}"></script>
+
+        <script defer src="{% static 'khoBlog/js/scripts/themes.js' %}"></script>
+        <script defer src="{% static 'khoBlog/js/scripts/tooltips.js' %}"></script>
+    {% endcompress js %}
 
     {% block rel %}
         <!-- base! favicon -->
@@ -266,13 +269,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- rel! js -->
-    <script src="{% static 'khoBlog/js/scripts/dynamic.js' %}"></script>
-    <script src="{% static 'vendor/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'khoBlog/js/scripts/offcanvas.js' %}"></script>
-    <script src="{% static 'khoBlog/js/scripts/themes.js' %}"></script>
-    <script src="{% static 'khoBlog/js/scripts/tooltips.js' %}"></script>
 
 </body>
 </html>
