error pages with code

--- a/khoBlog/templates/404.html
+++ b/khoBlog/templates/404.html
@@ -3,7 +3,7 @@
 {% load markdown_extra %}
 
 {% block page_top_title %}
-    Not Found
+    Error 404 Not Found
 {% endblock page_top_title %}
 
 {% block page_top_end %}
@@ -13,7 +13,7 @@
 {% endblock page_top_end %}
 
 {% block content_main %}
-    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Not Found</a>
+    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Error 404 Not Found</a>
 {% endblock content_main %}
 
 {% block pagination %}
