--- a/khoBlog/templates/400.html
+++ b/khoBlog/templates/400.html
@@ -3,7 +3,7 @@
 {% load markdown_extra %}
 
 {% block page_top_title %}
-    Bad Request
+    Error 400 Bad Request
 {% endblock page_top_title %}
 
 {% block page_top_end %}
@@ -13,7 +13,7 @@
 {% endblock page_top_end %}
 
 {% block content_main %}
-    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Bad Request</a>
+    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Error 400 Bad Request</a>
 {% endblock content_main %}
 
 {% block pagination %}
