--- a/khoBlog/templates/403.html
+++ b/khoBlog/templates/403.html
@@ -3,7 +3,7 @@
 {% load markdown_extra %}
 
 {% block page_top_title %}
-    Permission Denied
+    Error 403 Permission Denied
 {% endblock page_top_title %}
 
 {% block page_top_end %}
@@ -13,7 +13,7 @@
 {% endblock page_top_end %}
 
 {% block content_main %}
-    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Permission Denied</a>
+    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Error 403 Permission Denied</a>
 {% endblock content_main %}
 
 {% block pagination %}
