--- a/khoBlog/templates/500.html
+++ b/khoBlog/templates/500.html
@@ -3,7 +3,7 @@
 {% load markdown_extra %}
 
 {% block page_top_title %}
-    Server Error
+    Error 500 Server Error
 {% endblock page_top_title %}
 
 {% block page_top_end %}
@@ -13,7 +13,7 @@
 {% endblock page_top_end %}
 
 {% block content_main %}
-    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Server Error</a>
+    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Error 500 Server Error</a>
 {% endblock content_main %}
 
 {% block pagination %}
