--- a/khoBlog/templates/authentication/includes/login_form.html
+++ b/khoBlog/templates/authentication/includes/login_form.html
@@ -14,6 +14,6 @@
         </form>
     </div>
     <div class="card-footer">
-        <p class="text-right">Don't have an account? <a href="{% url 'accounts:signup' %}{% if next %}?next={{ next }}{% endif %}" rel="nofollow">Sign up</a></p>
+        <p>Don't have an account? <a href="{% url 'accounts:signup' %}{% if next %}?next={{ next }}{% endif %}" rel="nofollow">Sign up</a></p>
     </div>
 </div>
