--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -85,7 +85,7 @@
     {% compress js %}
         <script defer src="{% static 'khoBlog/js/scripts/dynamic.js' %}"></script>
         <script defer src="{% static 'khoBlog/js/scripts/offcanvas.js' %}"></script>
-        <script defer src="{% static 'vendor/node_modules/jquery/dist/jquery.slim.min.js' %}"></script>
+        <script async defer src="{% static 'vendor/node_modules/jquery/dist/jquery.slim.min.js' %}"></script>
 
         <script defer src="{% static 'khoBlog/js/scripts/themes.js' %}"></script>
         <script defer src="{% static 'khoBlog/js/scripts/tooltips.js' %}"></script>
