--- a/khoBlog/templates/extras/form_field_extra.html
+++ b/khoBlog/templates/extras/form_field_extra.html
@@ -7,13 +7,26 @@
         {{ field|add_class:"form-control" }}
     </div>
 {% elif field|widget_type == "checkboxinput" %}
+    {{ field.label_tag }}
     <div class="form-check">
         {{ field|add_class:"form-check-input" }}
     </div>
-{% else %}
+{% elif field|widget_type == "selectmultiple" or field|widget_type == "datetimepickerinput" %}
+    {{ field.label_tag }}
     <div class="input-group">
-        {{ field|add_class:"form-control" }}
+        {{ field|add_class:"form-control"|attr:"multiple" }}
     </div>
+{% elif field|widget_type == "markdownxwidget" %}
+    {{ field|add_class:"form-control"|attr:"placeholder:" }}
+{% else %}
+    <div class="form-floating">
+        {{ field|add_class:"form-control"|attr:"placeholder:" }}
+        {{ field.label_tag }}
+    </div>
+{% endif %}
+
+{% if field.help_text %}
+    <span class="text-small text-muted">{{ field.help_text }}</span>
 {% endif %}
 
 {% for error in field.errors %}
